--- a/front-end/templates/index.html
+++ b/front-end/templates/index.html
@@ -45,7 +45,7 @@
       </tfoot>
     </table>
   </div>
-  <div style="width:35%;height:100%">
+  <div style="width:35%;height:100%;background-color:#222222">
     <div id="stats" style="padding:10px;width:100%;height:15%;justify-content:space-between;display:flex;background-color:#666666;color:white;flex-wrap:wrap;align-items:center"></div>
     <div id="stats-plot" style="width:100%;height:85%"></div>
   </div>
