--- a/front-end/templates/index.html
+++ b/front-end/templates/index.html
@@ -20,7 +20,7 @@
               <div style="display:flex;flex-direction:column;justify-content:space-between;height:100%">
                 <div style="display:flex;justify-content:space-between">
                   <div>{{column_names[i]}}</div>
-                  <div class="table-sort" state=0 column={{i}} style="cursor:pointer">⬍</div>
+                  <div class="table-sort" state=0 column={{i}} style="cursor:pointer;font-size:16px">⥯</div>
                 </div>
                 <div style="display:flex;justify-content:space-between">
                   {% if column_types[i] == "text" %}
